Update auf JDK 10
   -buildpath fix